--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
+.env.local
 
 # vercel
 .vercel
@@ -43,3 +43,4 @@ next-env.d.ts
 *.njsproj
 *.sln
 *.sw?
+.env.local
