--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-form": "^0.0.3",
     "@radix-ui/react-separator": "^1.0.3",
     "@supabase/auth-helpers-nextjs": "^0.8.1",
@@ -18,6 +19,7 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.16",
+    "clsx": "^2.0.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
     "next": "13.5.2",
@@ -27,6 +29,7 @@
     "react-hook-form": "^7.46.2",
     "react-icons": "^4.11.0",
     "react-toastify": "^9.1.3",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "yup": "^1.3.2"
