--- a/.env.local.example
+++ b/.env.local.example
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_SUPABASE_URL=your-supabase-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
+NEXT_PUBLIC_PROJECTS_BUCKET=your-supabase-bucket-name
+NEXT_PUBLIC_PROJECT_ID=your-supabase-project-id
