--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@types/uuid": "^9.0.6",
     "autoprefixer": "10.4.16",
     "clsx": "^2.0.0",
     "eslint": "8.49.0",
-    "eslint-config-next": "13.5.2",
-    "next": "13.5.2",
+    "eslint-config-next": "^14.0.0",
+    "next": "^14.0.0",
     "postcss": "8.4.30",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-easy-crop": "^5.0.2",
     "react-hook-form": "^7.46.2",
     "react-icons": "^4.11.0",
@@ -35,6 +36,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
+    "uuid": "^9.0.1",
     "yup": "^1.3.2"
   }
 }
