--- a/package.json
+++ b/package.json
@@ -41,5 +41,14 @@
     "typescript": "5.3.3",
     "uuid": "^9.0.1",
     "yup": "^1.3.3"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.11"
+  },
+  "prettier": {
+    "plugins": [
+      "prettier-plugin-tailwindcss"
+    ]
   }
 }
